--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,143 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv =»Cache-Control» content =»no-cache»/>
     <title>Conectados</title>
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="css/fontawesome-all.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="{{css}}">
 </head>
 <body>
+    <div class="hero">
+        <header class="header contenedor">
+            <div class="logo">
+                <img src="{{logoConectados}}">
+            </div>
+            <nav class="navegacion">
+                <a href="#">Javier</a>    
+                 <ul>
+                     <li><a href="#">Cuenta</a></li>
+                     <li><a href="#">Mis eventos</a></li>
+                 </ul>
+            </nav>
+        </header>
+        <div class="contenido-hero contenedor">
+            <h1>Encuentra las mejores experiencias en linea</h1>
+            <form action="#">
+                <input type="text" name="busqueda" class="busqueda" placeholder="Buscar etiqueta de la actividad">
+                <input type="submit" value="buscar">
+            </form>
+        </div>
+    </div>
 
-    <script src="js/scripts.js"></script>
+    <main class="contenido contenedor">
+        <section class="hacer">
+            <h2>Experiencias</h2>
+            <div class="contenedor-cards">
+                <div class="card">
+                    <img src="{{img1}}">
+                    <div class="info">
+                        <p class="categoria">concierto</p>
+                        <p class="titulo">Actividad 1</p>
+                        <p class="precio">Q1,200 por persona</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="{{img2}}">
+                    <div class="info">
+                        <p class="categoria">streaming</p>
+                        <p class="titulo">Actividad 2</p>
+                        <p class="precio">Q300 por persona</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="{{img3}}">
+                    <div class="info">
+                        <p class="categoria">Cafe</p>
+                        <p class="titulo">Actividad 3</p>
+                        <p class="precio">Q400 por persona</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="{{img4}}">
+                    <div class="info">
+                        <p class="categoria">Viajes</p>
+                        <p class="titulo">Actividad 4</p>
+                        <p class="precio">Q500 por persona</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="{{img1}}">
+                    <div class="info">
+                        <p class="categoria">Carreras</p>
+                        <p class="titulo">Actividad 5</p>
+                        <p class="precio">Q1,200 por persona</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="{{img2}}">
+                    <div class="info">
+                        <p class="categoria">Realidad Virtual</p>
+                        <p class="titulo">Actividad 6</p>
+                        <p class="precio">Q300 por persona</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="{{img3}}">
+                    <div class="info">
+                        <p class="categoria">Programacion</p>
+                        <p class="titulo">Actividad 7</p>
+                        <p class="precio">Q400 por persona</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="{{img4}}">
+                    <div class="info">
+                        <p class="categoria">Tecnologia</p>
+                        <p class="titulo">Actividad 8</p>
+                        <p class="precio">Q500 por persona</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="{{img1}}">
+                    <div class="info">
+                        <p class="categoria">Videojuegos</p>
+                        <p class="titulo">Actividad 9</p>
+                        <p class="precio">Q1,200 por persona</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="{{img2}}">
+                    <div class="info">
+                        <p class="categoria">Coina</p>
+                        <p class="titulo">Actividad 10</p>
+                        <p class="precio">Q300 por persona</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="{{img3}}">
+                    <div class="info">
+                        <p class="categoria">Museo</p>
+                        <p class="titulo">Actividad 11</p>
+                        <p class="precio">Q400 por persona</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="{{img4}}">
+                    <div class="info">
+                        <p class="categoria">Concierto</p>
+                        <p class="titulo">Actividad 12</p>
+                        <p class="precio">Q500 por persona</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="contenedor-cards contenedor">
+            <div class="nav-footer">
+                <h3>Conectados.com</h3>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
