--- a/static/registroEstilos.css
+++ b/static/registroEstilos.css
@@ -78,7 +78,7 @@ body{
     color: #757575;
 }
 
-.campos input{
+.campos > input{
     border-style: none solid solid solid;
     border-width: 0.1rem;
     height: 5rem;
@@ -86,12 +86,12 @@ body{
     padding-left: 2rem;
 }
 
-.campos input:nth-child(5){
+.campos input:nth-child(6){
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
 }
 
-.campos input:last-child{
+.campos input:nth-child(8){
     margin-top: 2rem;
     border-style: none;
     border-radius: 1rem;
@@ -108,3 +108,43 @@ body{
     font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
 }
 
+
+
+
+.profile-pic-div{
+    height: 10rem;
+    width: 10rem;
+    position: relative;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 1px solid grey;
+    margin: 0 auto;
+    margin-bottom: 2rem;
+}
+
+#photo{
+    height: 100%;
+    width: 100%;
+}
+
+
+#file{
+    display: none;
+}
+
+#uploadbtn{
+    height: 40px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    transform: translateX(-50%);
+    text-align: center;
+    left: 50%;
+    background: rgba(0, 0, 0, 0.7);
+    color: var(--blanco);
+    line-height: 30px;
+    font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
+    font-size: 15px;
+    cursor: pointer;
+    
+}
