cambios en template login y registro

--- a/templates/login.html
+++ b/templates/login.html
@@ -22,9 +22,8 @@
                 <legend>Inicio Sesión</legend>
                 <div class="campos">
                     <h3>Te damos la bienvenida a Conectados</h3>
-                    <h4>{{mensaje}}</h4>
-                    <input type="email" placeholder="Correo electrónico" name = "correo" id="correo">
-                    <input type="password" placeholder="Contraseña" name = "clave" id="contraseña">
+                    <input type="email" placeholder="Correo electrónico" name = "correo" id="correo" required>
+                    <input type="password" placeholder="Contraseña" name = "clave" id="contraseña" required>
                     <div class="registro">
                         <p>¿Todavía no estás en Conectados? <a href="/registro">Registrarse</a></p> 
                     </div>
