arreglo de cabeceras
Se arreglo la navegación en los templates index, mis_acitividades, nueva_actividad y cuenta

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,10 @@
             <div class="logo">
                 <img src="{{logoConectados}}">
             </div>
-            <nav class="navegacion">
-                <a href="#">Javier</a>    
-                 <ul>
-                     <li><a href="#">Cuenta</a></li>
-                     <li><a href="#">Mis eventos</a></li>
-                 </ul>
+            <nav class="navegacion">   
+                 <a href="mis_actividades">Mis actividades</a> 
+                 <a href="nueva_actividad">Nueva actividad</a>  
+                 <a href="cuenta">Cuenta</a>  
             </nav>
         </header>
         <div class="contenido-hero contenedor">
