--- a/static/mis_actividades.css
+++ b/static/mis_actividades.css
@@ -28,91 +28,136 @@ h3{
     font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
 }
 
-header{
-    box-shadow: 0px 1px 7px 0px #0000001a;
-    background-color:#ffffff;
+nav{
+    background:white;
+    height: 80px;  
+    width: 100%; 
+    box-shadow: 0px 1px 7px 0px rgba(0,0,0,0.1);
 }
 
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-self: start;
-    width: 100%;
-    align-items: center;
-    padding-top: 1rem;
+nav ul{
+    float:  right;
+    margin-right: 20px;
+}
+nav ul:last-child{
+    margin-right: 100px;
+}
+
+nav ul li{
+    display: inline-block;
+    line-height: 60px;
+    margin: 0 5px;
+}
+
+nav ul li a{
+    color:  #2c3e50;
+    font-size: 17px;
+    text-transform: uppercase;
+    padding: 7px 13px;
+    border-radius: 3px ;
+    text-decoration: none;
+}
+
+a:hover{
+    color: whitesmoke;
+    background: #E5242B;
+    transition: .5s;
+}
+
+.checkbtn{
+    font-size: 30px;
+    color: black;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+#check{
+    display: none;
+}
+
+.logo{
+    width: 15rem;
+    margin-left: 10rem;
+    margin-top: 0.5rem;
+}
+
+@media (max-width: 1040px){
+    .logo{
+        width: 10rem;
+        margin-left: 1rem;
+        margin-top: 1.5rem;
+    }
+}
+
+@media (max-width: 1135px){
+    
+    nav ul{
+        margin-right: 0px;
+    }
+    nav ul:last-child{
+        margin-right: 0px;
+    }
+}
+
+@media (max-width: 1020px){
+    label.logo{
+        font-size: 30px;
+        padding-left: 50px;
+    }
+
+    nav ul li a{
+        font-size: 16px;
+    }
+
+    .checkbtn{
+        display: block;
+    }
+
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 80px;
+        left: -200%;
+        text-align: center;
+        z-index: 1000;
+    }
+
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+
+    nav ul li a{
+        font-size: 20px;
+        color:whitesmoke;
+    }
+
+    a:hover{
+        background: none;
+        color: #E5242B;
+    }
+
+    #check:checked ~ ul{
+        left: 0;
+    }
+
+    .logo{
+        width: 10rem;
+        margin-left: 1rem;
+        margin-top: 1.5rem;
+    }
 }
 
 
 .contenedor{
     max-width: 1100px;
     margin: 0 auto;
-}
-
-.navegacion{
-    position: relative;
-}
-
-.navegacion a{
-    text-decoration: none;
-}
-
-.navegacion > a:hover{
-    cursor: pointer;
-    -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
-    -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
-    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
-}
-
-.navegacion ul{
-    transform: translateX(-65%);
-    margin-top: 1.5rem;
-    background-color: var(--claro);
-    width: 200px;
-    text-align: center;
-    position: absolute;
-    list-style-type: none;
-    padding: 0;
-    -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
-    -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
-    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
-    border-radius: 0.2rem;
-    display: none;
-}
-
-.navegacion a:focus + ul{
-    display: block;
-}
-
-.navegacion ul li{
-    padding: 0.5rem;
-}
-
-.navegacion ul li:hover{
-    background-color: #F7F7F7;
-}
-
-.navegacion ul li a{
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-    padding: 0;
-    margin: 0;
-    font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-    color: var(--obscuro) ;
-}
-
-.navegacion > a{
-    padding: 1rem;
-    border-radius: 2rem;
-    background-color: var(--claro);
-    color: var(--obscuro);
-    text-decoration: none;
-    margin-right: 1rem;
-    font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-}
-
-.navegacion a:last-of-type{
-    margin-right: 0;
 }
 
 .contenedor-hero{
@@ -143,23 +188,6 @@ form input[type="text"]{
     background-position: calc(1% + 1rem) calc(1% + .8rem);
     padding-left: 5rem;
     font-size: 1.6rem;
-}
-
-form input[type="submit"]{
-    position: absolute;
-    right: 1rem;
-    top: 0.6rem;
-    padding: .7rem 2rem;
-    border: none;
-    background-color: #E5242B;
-    color: var(--claro);
-    border-radius: 10px;
-    text-transform: uppercase;
-    font-size: 1.2rem;
-}
-
-form input[type="submit"]:hover{
-    cursor: pointer;
 }
 
 /** contenido principal **/
