--- a/static/styles.css
+++ b/static/styles.css
@@ -63,59 +63,18 @@ h3{
     -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
     box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
-}
 
-.navegacion ul{
-    transform: translateX(-65%);
-    margin-top: 1.5rem;
-    background-color: var(--claro);
-    width: 200px;
-    text-align: center;
-    position: absolute;
-    list-style-type: none;
-    padding: 0;
-    -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
-    -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
-    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
-    border-radius: 0.2rem;
-    display: none;
-}
-
-.navegacion a:focus + ul{
-    display: block;
-}
-
-.navegacion ul li{
-    padding: 0.5rem;
-}
-
-.navegacion ul li:hover{
-    background-color: #F7F7F7;
-}
-
-.navegacion ul li a{
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-    padding: 0;
-    margin: 0;
-    font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-    color: var(--obscuro) ;
 }
 
 .navegacion > a{
     padding: 1rem;
     border-radius: 2rem;
-    background-color: var(--claro);
-    color: var(--obscuro);
+    color: whitesmoke;
     text-decoration: none;
     margin-right: 1rem;
     font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
 }
 
-.navegacion a:last-of-type{
-    margin-right: 0;
-}
 
 .contenedor-hero{
     display: grid;
