--- a/templates/cuenta.html
+++ b/templates/cuenta.html
@@ -10,20 +10,21 @@
 </head>
 
 <body class="bg-light">
-    <header >
-        <div class="header contenedor">
-            <div class="logo">
-                <img src="{{logo}}">
-            </div>
-            <nav class="navegacion">
-                <a href="#">Javier</a>    
-                 <ul>
-                     <li><a href="#">Cuenta</a></li>
-                     <li><a href="#">Mis eventos</a></li>
-                 </ul>
-            </nav>
-        </div>
-    </header>
+    <nav>
+        <input type="checkbox" id= "check">
+        <label for="check" class="checkbtn">
+            <li class="fas fa-bars"></li>
+        </label>
+
+        <img src="{{logo}}" class="logo">
+        <ul>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="mis_actividades">Mis actividades</a></li>
+            <li><a href="nueva_actividad">Nueva actividad</a></li>
+            <li><a href="cuenta">Cuenta</a></li>
+        </ul>
+    </nav>
+	
 	<div class="container">
      	<div class="row d-flex justify-content-center">
             <div class="col-md-10 mt-5 pt-5">
