--- a/templates/registro.html
+++ b/templates/registro.html
@@ -30,26 +30,7 @@
                         <label for="file" id="uploadbtn">Elegir foto</label>
                     </div>
                     <!-- Fin foto de perfil -->
-                        <select name="paises" id="paises">
-                            <option value="Afganistán">Afganistán (+93)</option>
-                            <option value="Albania">Albania (+355)</option>
-                            <option value="Alemania">Alemania (+49)</option>
-                            <option value="Andorra">Andorra (+376)</option>
-                            <option value="Angola">Angola (+244)</option>
-                            <option value="Bielorrusia">Bielorrusia (+375)</option>
-                            <option value="Bolivia">Bolivia (+591)</option>
-                            <option value="Georgia">Georgia (+995)</option>
-                            <option value="Ghana">Ghana (+233)</option>
-                            <option value="Gibraltar">Gibraltar (+350)</option>
-                            <option value="Granada">Granada (+1)</option>
-                            <option value="Grecia">Grecia (+30)</option>
-                            <option value="Groenlandia">Groenlandia (+299)</option>
-                            <option value="Guadalupe">Guadalupe (+590)</option>
-                            <option value="Guam">Guam (+1)</option>
-                            <option selected="" value="Guatemala">Guatemala (+502)</option>
-                            <option value="GuayanaFrancesa">Guayana Francesa  (+594)</option>
-                            <option value="Guernesey">Guernesey (+44)</option>
-                        </select>
+                        <input type="text" placeholder="Pais" name="Pais" id="Pais" required>
                         <input type="text" placeholder="Nombre de usuario" name="nombre" id="nombre">
                         <input type="email" placeholder="Correo electrónico" name="correo" id="correo">
                         <input type="password" placeholder="Contraseña" name = "clave" id="contraseña">
