--- a/static/mis_actividades.css
+++ b/static/mis_actividades.css
@@ -207,6 +207,12 @@ form input[type="text"]{
     border-radius: 1rem;
 }
 
+
+.card_futuras img{
+    width: 100%;
+    border-radius: 1rem;
+}
+
 .info .categoria{
     text-transform: uppercase;
     font-size: 0.9rem;
@@ -265,4 +271,17 @@ form input[type="text"]{
 .nuevo{
  display: flex;
  align-items: center;
+}
+
+.btn-eliminar{
+    background-color: #E5242B;
+    height: 2rem;
+    border: 0;
+    border-radius: 0.25rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    color: white;
+    cursor:pointer;
 }
