--- a/static/registroEstilos.css
+++ b/static/registroEstilos.css
@@ -67,15 +67,13 @@ body{
     border-top: 0.1rem solid gainsboro;
 }
 
-.campos select{
+
+
+.campos input:nth-child(3){
     border-style: solid solid solid solid;
+    border-color: gainsboro;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
-    border-width: 0.1rem;
-    height: 4rem;
-    border-color: gainsboro;
-    padding-left: 2rem;
-    color: #757575;
 }
 
 .campos > input{
