--- a/templates/index.html
+++ b/templates/index.html
@@ -31,14 +31,17 @@
         <section class="hacer">
             <h2>Experiencias</h2>
             <div class="contenedor-cards">
+                <!-- for del diccionario que tenga toda la info de cada evento.-->
                 <div class="card">
                     <img src="{{img1}}">
                     <div class="info">
                         <p class="categoria">concierto</p>
                         <p class="titulo">Actividad 1</p>
                         <p class="precio">Q1,200 por persona</p>
+                        <!-- HAY QUE HACER UN FORM QUE ENVIE LA INFO DEL EVENTO que se manda el id del evento-->
                     </div>
                 </div>
+                <!-- se termina el for-->
                 <div class="card">
                     <img src="{{img2}}">
                     <div class="info">
@@ -127,7 +130,7 @@
                         <p class="precio">Q500 por persona</p>
                     </div>
                 </div>
-            </div>
+            </div><!-- este div se queda-->
         </section>
     </main>
     <footer class="footer">
