--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,17 @@
         </header>
         <div class="contenido-hero contenedor">
             <h1>Encuentra las mejores experiencias en linea</h1>
-            <form action="#">
-                <input type="text" name="busqueda" class="busqueda" placeholder="Buscar etiqueta de la actividad">
+            <form action="#"> 
+                <!--Cambiar el nombre de las categorias-->
+                <select type="text" name="busqueda" class="busqueda" placeholder="Buscar etiqueta de la actividad">
+                    <option selected="">Escoger una categoria...</option>
+                    <option value="1">Categoria 1</option>
+                    <option value="2">Categoria 2</option>
+                    <option value="3">Categoria 3</option>
+                    <option value="4">Categoria 4</option>
+                    <option value="4">Todas las categorias</option>
+                </select>
+                <!---->
                 <input type="submit" value="buscar">
             </form>
         </div>
