--- a/templates/registro.html
+++ b/templates/registro.html
@@ -26,9 +26,8 @@
                     <!-- Foto de perfil -->
                     <div class="">
                         <img id="photo">
-                        <form method=post enctype=multipart/form-data>
-                            <input type=file name=file>
-                        </form>
+                        <h4>Elija una foto de perfil:</h4>
+                        <input type=file name=file>
                     </div>
                     <!-- Fin foto de perfil -->
                         <input type="text" placeholder="Pais" name="Pais" id="Pais" required>
