Arreglo solicitud de imagenes
Se arreglaron las solicitudes de imagenes para poder tener una de portada de evento

--- a/templates/nueva_actividad.html
+++ b/templates/nueva_actividad.html
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                     <div>
-                            <h4>Foto 1 de Actividad:</h4>
+                            <h4>Foto de portada de Actividad:</h4>
                             <input type=file name=file1>
                             <h4>Foto 2 de Actividad:</h4>
                             <input type=file name=file2>
