primeras querys en app.py y referencias en html

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                 <div class="card">
                     <img src="{{img1}}">
                     <div class="info">
-                        <p class="categoria">concierto</p>
+                        <p class="categoria">concierto</p><!--ROW[4]-->
                         <p class="titulo">Actividad 1</p>
                         <p class="precio">Q1,200 por persona</p>
                         <!-- HAY QUE HACER UN FORM QUE ENVIE LA INFO DEL EVENTO que se manda el id del evento-->
