--- a/templates/registro.html
+++ b/templates/registro.html
@@ -24,10 +24,10 @@
                 <div class="campos">
                     <h3>Te damos la bienvenida a Conectados</h3>
                     <!-- Foto de perfil -->
-                    <div class="">
+                    <div class="profile-pic-div">
                         <img id="photo">
-                        <h4>Elija una foto de perfil:</h4>
-                        <input type=file name=file>
+                        <label for="file" id="uploadbtn">Foto de perfil</label>
+                        <input type=file name=file id="file">
                     </div>
                     <!-- Fin foto de perfil -->
                         <input type="text" placeholder="Pais" name="Pais" id="Pais" required>
